force-app/main/default/objects/E_MOC_Application__c.object
<CustomObject>
    <fields>
        <fullName>Diff_closed__c</fullName>
        <formula>IF( AND( ISPICKVAL(Status_Common_Workflow__c ,&quot;Close Out&quot;),true) , IF( Diff_Closed_MOC_verify__c &gt; 5, true, false), false)</formula>
        <label>Diff closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_closed_close_out__c</fullName>
        <formula>Stamp_date_closed__c -  Stamp_date_close_out__c</formula>
        <label>Diff(closed-close out)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_order_trigger_Implementation__c</fullName>
        <formula>TODAY() -  Stamp_date_Implementation__c</formula>
        <label>Diff(order trigger-Implementation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_readiness_review_Implementation__c</fullName>
        <formula>TODAY() - Stamp_date_Implementation__c</formula>
        <label>Diff(readiness review-Implementation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_risk_assessment_end_date__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Risk assessment&quot;) , IF( TODAY() &gt;  End_date__c , true, false) , false)</formula>
        <label>Diff(risk assessment-end date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diff_technical_review_end_date__c</fullName>
        <formula>IF( ISPICKVAL( Status_Functional_Override__c , &quot;Technical review&quot;) ,  IF( TODAY() &gt;  End_date__c , true, false) , false)</formula>
        <label>Diff(technical review-end date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Alarm_by_Ops_for_HW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable alarm by Ops for HW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Docs_Require_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Docs Require Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Guideline_type__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Procedure/QMTS-SPR-09Appendix%206_MOC%20Document%20Guideline.xlsx?Web=1&apos;</defaultValue>
        <label>MOC Document Guideline</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Storage_Guideline__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Procedure/QMTS-SPR-09Appendix%205_MOC%20document%20list_Storage.xlsx?Web=1&apos;</defaultValue>
        <label>MOC Document List / Storage</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drainage_system_AOC_COC_etc_Bund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drainage system (AOC, COC, etc)  / Bund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Actuator_process_at_Valve__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(e.g. Motor, MOV)</inlineHelpText>
        <label>Driver/Actuator (process) at Valve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_Recommendation__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMEV-EFR-17_EA%20Recommendation%20Response%20Sheet%20Form.docx?Web=1&apos;</defaultValue>
        <label>EA Recommendation Response Sheet Form</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMOC_Number_for_permanent_MOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMOC Number for permanent MOC</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Application</relationshipLabel>
        <relationshipName>E_MOC_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_MOC_Title__c</fullName>
        <label>E-MOC Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_Type__c</fullName>
        <label>E-MOC Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_link__c</fullName>
        <formula>&apos;https://thaioil.lightning.force.com/lightning/r/E_MOC_Application__c/&apos; + CASESAFEID(Id)+ &apos;/view&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-MOC link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_equipment_system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical equipment / system</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Backup_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Backup Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Concept_Date__c</fullName>
        <label>Emergency-Concept Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_ID_Category_1__c</fullName>
        <formula>Assigned_To_Category_1__r.Employee_Id__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_Category_2__c</fullName>
        <formula>Assigned_To_Category_2__r.Employee_Id__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_Category_3__c</fullName>
        <formula>Assigned_To_Category_3__r.Employee_Id__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_QA_QC__c</fullName>
        <formula>Assigned_To_QA_QC__r.Employee_Id__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Monitoring_Program__c</fullName>
        <label>End Date Monitoring Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>Required End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_Likelihood_Final__c</fullName>
        <label>Environment Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_Likelihood__c</fullName>
        <label>Environment Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_RAM_Final__c</fullName>
        <label>Environment RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment_RAM__c</fullName>
        <label>Environment RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment_Remark_Final__c</fullName>
        <label>Environment Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Remark__c</fullName>
        <label>Environment Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Severity_Final__c</fullName>
        <label>Environment Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No effect</fullName>
                </value>
                <value>
                    <fullName>1 - Slight effect, within fence</fullName>
                </value>
                <value>
                    <fullName>2 - Minor effect, single breach or complaint</fullName>
                </value>
                <value>
                    <fullName>3 - Localised effect, repeated breaches or many complaints</fullName>
                </value>
                <value>
                    <fullName>4 - Major effect, extended breach or wide spread nuisance</fullName>
                </value>
                <value>
                    <fullName>5 - Massive effect, persistent severe damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_Severity__c</fullName>
        <label>Environment Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - No effect</fullName>
                </value>
                <value>
                    <fullName>1 - Slight effect, within fence</fullName>
                </value>
                <value>
                    <fullName>2 - Minor effect, single breach or complaint</fullName>
                </value>
                <value>
                    <fullName>3 - Localised effect, repeated breaches or many complaints</fullName>
                </value>
                <value>
                    <fullName>4 - Major effect, extended breach or wide spread nuisance</fullName>
                </value>
                <value>
                    <fullName>5 - Massive effect, persistent severe damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <formula>&quot;M&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environmental_Impact_Checklist_Link__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMEV-EFR-15_Environmental%20Impact%20checklist%20for%20MOC.xlsx?Web=1&apos;</defaultValue>
        <label>Environmental Impact Checklist Link</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environmental_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <formula>Functional_Location__r.First_Related_Equipment__r.Name</formula>
        <label>Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Require_to_extend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extend_Require_to_extend_to_prevent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN_Button_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FN Button 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FN Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN_Category_Type__c</fullName>
        <label>FN Category Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_TA_Review_Date__c</fullName>
        <label>FN-TA Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fire_Gas_detection_system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire &amp; Gas detection system</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fired_Heaters_Fire_Boiler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fired Heaters / Fire Boiler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Description__c</fullName>
        <formula>Functional_Location__r.Description__c</formula>
        <label>Functional Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Name__c</fullName>
        <formula>Functional_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>E-MOC Application</relationshipLabel>
        <relationshipName>E_MOC_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Override_Category__c</fullName>
        <label>Functional Override Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Override_Group__c</fullName>
        <label>Functional Override Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Functional Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Golden_weld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golden weld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAZOP_Checklist_Link__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-24_HAZOP%20Study%20Worksheet.xlsx?Web=1&apos;</defaultValue>
        <label>HAZOP Checklist Link</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAZOP_Recommendation__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-25_HAZOP%20Recommendation%20Response%20Sheet%20Form.docx?Web=1&apos;</defaultValue>
        <label>HAZOP Recommendation Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAZOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HAZOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRA_Checklist_Link__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-12_HRA%20for%20MOC.xlsx?Web=1&apos;</defaultValue>
        <label>HRA Checklist Link</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Recommendation__c</fullName>
        <defaultValue>&apos;https://thaioilintranet.thaioilgroup.com/sites/ISODocument/ISO/ISODocument/Form/QMTS-SFR-30_HRA%20MOC%20Recommendation%20response%20sheet.docx?Web=1&apos;</defaultValue>
        <label>HRA Recommendation Response Sheet Form</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRP_checklist__c</fullName>
        <defaultValue>&quot;https://whimsical.com/emoc-common-flow-Q7D3FCZPh2Ry8mjZPNAboJ&quot;</defaultValue>
        <label>HRP checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HVAC_Refrigeration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVAC &amp; Refrigeration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_ADOE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has ADOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Doc_Req_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Doc Req Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Hazard_Screening_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Hazard Screening Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_QA_QC_checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has QA/QC checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazard_Sendback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazard Sendback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_Detail__c</fullName>
        <label>History Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hot_tap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot tap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hydraulic_power_unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hydraulic power unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I have checked and confirmed the change already returned to normal.</inlineHelpText>
        <label>I have checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_checked_and_confirmed_the_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have checked and confirmed the change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_confirmed_Risk_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have confirmed Risk Analysis already u</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_confirmed_already_upload_PSSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have confirmed already upload PSSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_incorporated_comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have incorporated comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_the_deviation_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded the deviation form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Idled_Retired_Assets_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Idled / Retired Assets (equipment)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Date_Time__c</fullName>
        <label>Implementation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inhibit_Alarm_request_for_FOX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inhibit alarm request for FOX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inhibit_alarm_for_maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inhibit alarm for maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inhibit_for_process_or_Equipment_S_D__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(Excluded Fire&amp;Gas system)</inlineHelpText>
        <label>Inhibit for process or equipment S/D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiating_Event_Demand_Scenario__c</fullName>
        <label>Initiating Event (Demand Scenario)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instrument_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instrument change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instrumentation_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instrumentation equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insulation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insulation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <formula>TEXT(Notification__r.Integration_Status__c)</formula>
        <label>Integration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lesson_Learn__c</fullName>
        <label>Lesson Learn</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loading_arm_Jetty_Lorry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loading arm (Jetty &amp; Lorry)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOC_FOCAL_POINT_NAME_Text__c</fullName>
        <formula>MOC_Focal_Point_Name__r.FirstName &amp;&quot; &quot;&amp; MOC_Focal_Point_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOC FOCAL POINT NAME Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOC_Focal_Point_ID__c</fullName>
        <formula>MOC_Focal_Point_Name__r.Employee_Id__c</formula>
        <label>MOC Focal Point ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOC_Focal_Point_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MOC Focal Point Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOC_Type__c</fullName>
        <label>MOC Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOS_for_maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOS for maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOS_for_ops_purpose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOS for Ops purpose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Type__c</fullName>
        <formula>Functional_Location__r.Mainworkcenter_type__c</formula>
        <label>Main Work Center Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <formula>Functional_Location__r.MainWorkCenter__r.Name</formula>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_order_is_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main order is closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <formula>Functional_Location__r.Maintenance_Plant_Text__c</formula>
        <label>Maintenance Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mechanical_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mechanical change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mitigation_Plan_1__c</fullName>
        <label>Mitigation Plan #1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mitigation_Plan_2__c</fullName>
        <label>Mitigation Plan #2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mitigation_Precaution_1__c</fullName>
        <inlineHelpText>Mitigation / Precaution (What can prevent it from going wrong?) แนวทางป้องกันหรือการลดอันตราย</inlineHelpText>
        <label>Mitigation / Precaution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ทำการ Monitor tag ข้างเคียง หรือตัวอ่านที่สามารถทดแทนได้ (Redundant Transmitter) และทำการ Record ตามความถี่ที่เหมาะสม</fullName>
                </value>
                <value>
                    <fullName>ให้ Field operator ทำการ Monitor local equipment เช่น SG เป็นต้น และทำการ Record ตามความถี่ที่เหมาะสม</fullName>
                </value>
                <value>
                    <fullName>รักษา Process condition ให้ Steady โดยไม่ทำการ Adjust process condition หรือเปลี่ยนแปลงกำลังการผลิต ที่ไม่จำเป็น และทำการ Record ตามความถี่ที่เหมาะสม</fullName>
                </value>
                <value>
                    <fullName>เตรียมแผนฉุกเฉิน หรือปฏิบัติตาม Abnormal work instruction เมื่อเกิดสถานการณ์ที่ไม่พึ่งประสงค์ รวมถึงมีการซักซ้อมแผนฉุกเฉินทุกๆกะ</fullName>
                </value>
                <value>
                    <fullName>สื่อสารและยกระดับการซักซ้อมแผนฉุกเฉินให้สูงขึ้น เมื่อส่งผลกระทบต่อพื้นที่อื่นๆ</fullName>
                </value>
                <value>
                    <fullName>ไม่ต้องมีมาตรการเพิ่มเติมเนื่องจาก Process shutdown</fullName>
                </value>
                <value>
                    <fullName>ไม่ต้องมีมาตรการเพิ่มเติมเนื่องจาก Equipment shutdown</fullName>
                </value>
                <value>
                    <fullName>อื่นๆ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigation_Precaution__c</fullName>
        <label>Mitigation/Precaution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mothballing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mothballing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Reminder_Date__c</fullName>
        <label>Next Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Correct_the_problem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_MOC_Accomplishment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Monitoring_Program_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Require_to_demolish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Normal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Normal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Extend_Require_to_extend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Extend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Extend_Require_to_extend_to_prevent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Extend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Closed_date__c</fullName>
        <label>Notification Closed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <formula>Notification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Status__c</fullName>
        <formula>TEXT(Notification__r.Notification_Status__c )</formula>
        <label>Notification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <formula>TEXT( Notification__r.Type__c )</formula>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>E-MOC Application</relationshipLabel>
        <relationshipName>E_MOC_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_for_Permanent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification for Permanent</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>E-MOC Application (Notification for Permanent)</relationshipLabel>
        <relationshipName>E_MOC_Application1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPM_OPEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPM (OPEX)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>Notification__r.Order__c</formula>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PISUsers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PISUsers</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>E-MOC Application</relationshipLabel>
        <relationshipName>E_MOC_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Civil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM-Civil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Electrical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM-Electrical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Instrument__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM-Instrument</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Rotating_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM-Rotating equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Stationary_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM-Stationary equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSSR_Cate_type_Report__c</fullName>
        <label>PSSR Cate type Report</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Painting_and_coating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Painting and coating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>People_Likelihood_Final__c</fullName>
        <label>People Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Improbable</fullName>
                </value>
                <value>
                    <fullName>B - Unlikely</fullName>
                </value>
                <value>
                    <fullName>C - Possible</fullName>
                </value>
                <value>
                    <fullName>D - Likely</fullName>
                </value>
                <value>
                    <fullName>E - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>